# pfpa-openenv

./: Dockerfile  app.py  inference.py  openenv.yaml  validate.py
environment/: __init__.py  client.py  grader.py  models.py
pfpa-openenv-fixed/: .env.example  README.md  app.py  deploy_to_hf.py  inference.py  pyproject.toml  requirements.txt
pfpa-openenv-fixed/environment/: grader.py  models.py  scenarios.py
pfpa-openenv-fixed/server/: app.py
