[project]
name = "pfpa-openenv"
version = "1.0.0"
description = "PFPA OpenEnv — Personal Productivity AI RL Environment"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pydantic==2.9.2",
    "openai==1.30.1",
    "requests==2.32.3",
    "pytz==2024.2",
    "openenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["environment"]

[tool.openenv]
env_name = "pfpa-openenv"
version = "1.0.0"