[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pfpa-openenv"
version = "1.0.0"
description = "PFPA OpenEnv — Personal Productivity AI RL Environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "pytz>=2024.1",
]

[project.scripts]
server = "app:main"

[tool.setuptools.packages.find]
where = ["."]